@@ -9,6 +9,7 @@ import org.fw.core.lib.state.OperationFw;
 import org.fw.core.lib.state.StateHoleFw;
 import org.fw.core.state.obj.Obj;
 
+import java.util.Collections;
 import java.util.Set;
 
 public final class WriteOperation implements Operation {
@@ -36,12 +37,12 @@ public final class WriteOperation implements Operation {
 
     @Override
     public Set<Obj> reads(Context context) {
-        return Set.of();
+        return Collections.emptySet();
     }
 
     @Override
     public Set<Obj> writes(Context context) {
-        return Set.of(obj);
+        return Collections.singleton(obj);
     }
 
     @Override
